@@ -1,3 +1,4 @@
+* new possibility to transform unit cells and find symmetries
 * bugfix of numpy.set_printoptions use
 * require Python 3.6 due to use of f-strings
 * new PowderModel.plot method to quickly visualize a Powder pattern
